k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  ports:
    - port: 443
      targetPort: 443
